// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`core > renders all Phase 1 formats from normalized tokens 1`] = `
"[
  {
    "name": "color/brand/primary",
    "path": [
      "color",
      "brand",
      "primary"
    ],
    "type": "color",
    "value": {
      "r": 51,
      "g": 102,
      "b": 255,
      "a": 1
    }
  },
  {
    "name": "brand/secondary",
    "path": [
      "brand",
      "secondary"
    ],
    "type": "color",
    "value": {
      "r": 255,
      "g": 0,
      "b": 0,
      "a": 0.5
    }
  },
  {
    "name": "color/brand/overlay/subtle",
    "path": [
      "color",
      "brand",
      "overlay",
      "subtle"
    ],
    "type": "color",
    "value": {
      "r": 0,
      "g": 0,
      "b": 0,
      "a": 0.5
    }
  },
  {
    "name": "spacing/small",
    "path": [
      "spacing",
      "small"
    ],
    "type": "spacing",
    "value": 8
  },
  {
    "name": "spacing/layout/card/gap",
    "path": [
      "spacing",
      "layout",
      "card",
      "gap"
    ],
    "type": "spacing",
    "value": 24
  },
  {
    "name": "radius/medium",
    "path": [
      "radius",
      "medium"
    ],
    "type": "radius",
    "value": 8
  },
  {
    "name": "fontSize/body",
    "path": [
      "fontSize",
      "body"
    ],
    "type": "fontSize",
    "value": 16
  },
  {
    "name": "opacity/disabled",
    "path": [
      "opacity",
      "disabled"
    ],
    "type": "opacity",
    "value": 0.5
  }
]
"
`;

exports[`core > renders all Phase 1 formats from normalized tokens 2`] = `
"export const theme = {
  "color": {
    "brand": {
      "primary": "#3366ff",
      "overlay": {
        "subtle": "#00000080"
      }
    }
  },
  "brand": {
    "secondary": "#ff000080"
  },
  "spacing": {
    "small": "8px",
    "layout": {
      "card": {
        "gap": "24px"
      }
    }
  },
  "radius": {
    "medium": "8px"
  },
  "fontSize": {
    "body": "16px"
  },
  "opacity": {
    "disabled": "0.5"
  }
} as const;
"
`;

exports[`core > renders all Phase 1 formats from normalized tokens 3`] = `
":root {
  --color-brand-primary: #3366ff;
  --color-brand-secondary: #ff000080;
  --color-brand-overlay-subtle: #00000080;
  --spacing-small: 8px;
  --spacing-layout-card-gap: 24px;
  --radius-medium: 8px;
  --font-size-body: 16px;
  --opacity-disabled: 0.5;
}
"
`;

exports[`core > renders all Phase 1 formats from normalized tokens 4`] = `
"$color-brand-primary: #3366ff;
$color-brand-secondary: #ff000080;
$color-brand-overlay-subtle: #00000080;
$spacing-small: 8px;
$spacing-layout-card-gap: 24px;
$radius-medium: 8px;
$font-size-body: 16px;
$opacity-disabled: 0.5;
"
`;

exports[`core > renders all Phase 1 formats from normalized tokens 5`] = `
"@theme {
  --color-brand-primary: #3366ff;
  --color-brand-secondary: #ff000080;
  --color-brand-overlay-subtle: #00000080;
  --spacing-small: 8px;
  --spacing-layout-card-gap: 24px;
  --radius-medium: 8px;
  --font-size-body: 16px;
  --opacity-disabled: 0.5;
}
"
`;

exports[`core > renders all Phase 1 formats from normalized tokens 6`] = `
"{
  "color": {
    "brand": {
      "primary": {
        "$type": "color",
        "$value": "#3366ff"
      },
      "overlay": {
        "subtle": {
          "$type": "color",
          "$value": "#00000080"
        }
      }
    }
  },
  "brand": {
    "secondary": {
      "$type": "color",
      "$value": "#ff000080"
    }
  },
  "spacing": {
    "small": {
      "$type": "dimension",
      "$value": {
        "value": 8,
        "unit": "px"
      }
    },
    "layout": {
      "card": {
        "gap": {
          "$type": "dimension",
          "$value": {
            "value": 24,
            "unit": "px"
          }
        }
      }
    }
  },
  "radius": {
    "medium": {
      "$type": "dimension",
      "$value": {
        "value": 8,
        "unit": "px"
      }
    }
  },
  "fontSize": {
    "body": {
      "$type": "dimension",
      "$value": {
        "value": 16,
        "unit": "px"
      }
    }
  },
  "opacity": {
    "disabled": {
      "$type": "number",
      "$value": 0.5
    }
  }
}
"
`;
